[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Enemies.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Explosion 1.wav" type="AudioStream" id=3]

[node name="Enemies" type="Node2D"]
position = Vector2( 400, 160 )
script = ExtResource( 2 )

[node name="Enemy_0,4" parent="." groups=[
"row_4",
] instance=ExtResource( 1 )]
position = Vector2( -225, -120 )

[node name="Enemy_1,4" parent="." groups=[
"row_4",
] instance=ExtResource( 1 )]
position = Vector2( -180, -120 )

[node name="Enemy_2,4" parent="." groups=[
"row_4",
] instance=ExtResource( 1 )]
position = Vector2( -135, -120 )

[node name="Enemy_3,4" parent="." groups=[
"row_4",
] instance=ExtResource( 1 )]
position = Vector2( -90, -120 )

[node name="Enemy_4,4" parent="." groups=[
"row_4",
] instance=ExtResource( 1 )]
position = Vector2( -45, -120 )

[node name="Enemy_5,4" parent="." groups=[
"row_4",
] instance=ExtResource( 1 )]
position = Vector2( 0, -120 )

[node name="Enemy_6,4" parent="." groups=[
"row_4",
] instance=ExtResource( 1 )]
position = Vector2( 45, -120 )

[node name="Enemy_7,4" parent="." groups=[
"row_4",
] instance=ExtResource( 1 )]
position = Vector2( 90, -120 )

[node name="Enemy_8,4" parent="." groups=[
"row_4",
] instance=ExtResource( 1 )]
position = Vector2( 135, -120 )

[node name="Enemy_9,4" parent="." groups=[
"row_4",
] instance=ExtResource( 1 )]
position = Vector2( 180, -120 )

[node name="Enemy_10,4" parent="." groups=[
"row_4",
] instance=ExtResource( 1 )]
position = Vector2( 225, -120 )

[node name="Enemy_0,3" parent="." groups=[
"row_3",
] instance=ExtResource( 1 )]
position = Vector2( -225, -60 )

[node name="Enemy_1,3" parent="." groups=[
"row_3",
] instance=ExtResource( 1 )]
position = Vector2( -180, -60 )

[node name="Enemy_2,3" parent="." groups=[
"row_3",
] instance=ExtResource( 1 )]
position = Vector2( -135, -60 )

[node name="Enemy_3,3" parent="." groups=[
"row_3",
] instance=ExtResource( 1 )]
position = Vector2( -90, -60 )

[node name="Enemy_4,3" parent="." groups=[
"row_3",
] instance=ExtResource( 1 )]
position = Vector2( -45, -60 )

[node name="Enemy_5,3" parent="." groups=[
"row_3",
] instance=ExtResource( 1 )]
position = Vector2( 0, -60 )

[node name="Enemy_6,3" parent="." groups=[
"row_3",
] instance=ExtResource( 1 )]
position = Vector2( 45, -60 )

[node name="Enemy_7,3" parent="." groups=[
"row_3",
] instance=ExtResource( 1 )]
position = Vector2( 90, -60 )

[node name="Enemy_8,3" parent="." groups=[
"row_3",
] instance=ExtResource( 1 )]
position = Vector2( 135, -60 )

[node name="Enemy_9,3" parent="." groups=[
"row_3",
] instance=ExtResource( 1 )]
position = Vector2( 180, -60 )

[node name="Enemy_10,3" parent="." groups=[
"row_3",
] instance=ExtResource( 1 )]
position = Vector2( 225, -60 )

[node name="Enemy_0, 2" parent="." groups=[
"row_2",
] instance=ExtResource( 1 )]
position = Vector2( -225, 0 )

[node name="Enemy_1,2" parent="." groups=[
"row_2",
] instance=ExtResource( 1 )]
position = Vector2( -180, 0 )

[node name="Enemy_2,2" parent="." groups=[
"row_2",
] instance=ExtResource( 1 )]
position = Vector2( -135, 0 )

[node name="Enemy_3,2" parent="." groups=[
"row_2",
] instance=ExtResource( 1 )]
position = Vector2( -90, 0 )

[node name="Enemy_4,2" parent="." groups=[
"row_2",
] instance=ExtResource( 1 )]
position = Vector2( -45, 0 )

[node name="Enemy_5,2" parent="." groups=[
"row_2",
] instance=ExtResource( 1 )]

[node name="Enemy_6,2" parent="." groups=[
"row_2",
] instance=ExtResource( 1 )]
position = Vector2( 45, 0 )

[node name="Enemy_7,2" parent="." groups=[
"row_2",
] instance=ExtResource( 1 )]
position = Vector2( 90, 0 )

[node name="Enemy_8,2" parent="." groups=[
"row_2",
] instance=ExtResource( 1 )]
position = Vector2( 135, 0 )

[node name="Enemy_9,2" parent="." groups=[
"row_2",
] instance=ExtResource( 1 )]
position = Vector2( 180, 0 )

[node name="Enemy_10,2" parent="." groups=[
"row_2",
] instance=ExtResource( 1 )]
position = Vector2( 225, 0 )

[node name="Enemy_0,1" parent="." groups=[
"row_1",
] instance=ExtResource( 1 )]
position = Vector2( -225, 60 )

[node name="Enemy_1,1" parent="." groups=[
"row_1",
] instance=ExtResource( 1 )]
position = Vector2( -180, 60 )

[node name="Enemy_2,1" parent="." groups=[
"row_1",
] instance=ExtResource( 1 )]
position = Vector2( -135, 60 )

[node name="Enemy_3,1" parent="." groups=[
"row_1",
] instance=ExtResource( 1 )]
position = Vector2( -90, 60 )

[node name="Enemy_4,1" parent="." groups=[
"row_1",
] instance=ExtResource( 1 )]
position = Vector2( -45, 58.4126 )

[node name="Enemy_5,1" parent="." groups=[
"row_1",
] instance=ExtResource( 1 )]
position = Vector2( 0, 60 )

[node name="Enemy_6,1" parent="." groups=[
"row_1",
] instance=ExtResource( 1 )]
position = Vector2( 45, 60 )

[node name="Enemy_7,1" parent="." groups=[
"row_1",
] instance=ExtResource( 1 )]
position = Vector2( 90, 60 )

[node name="Enemy_8,1" parent="." groups=[
"row_1",
] instance=ExtResource( 1 )]
position = Vector2( 135, 60 )

[node name="Enemy_9,1" parent="." groups=[
"row_1",
] instance=ExtResource( 1 )]
position = Vector2( 180, 60 )

[node name="Enemy_10,1" parent="." groups=[
"row_1",
] instance=ExtResource( 1 )]
position = Vector2( 225, 60 )

[node name="Enemy_0,0" parent="." groups=[
"row_0",
] instance=ExtResource( 1 )]
position = Vector2( -225, 120 )

[node name="Enemy_1,0" parent="." groups=[
"row_0",
] instance=ExtResource( 1 )]
position = Vector2( -180, 120 )

[node name="Enemy_2,0" parent="." groups=[
"row_0",
] instance=ExtResource( 1 )]
position = Vector2( -135, 120 )

[node name="Enemy_3,0" parent="." groups=[
"row_0",
] instance=ExtResource( 1 )]
position = Vector2( -90, 120 )

[node name="Enemy_4,0" parent="." groups=[
"row_0",
] instance=ExtResource( 1 )]
position = Vector2( -45, 120 )

[node name="Enemy_5,0" parent="." groups=[
"row_0",
] instance=ExtResource( 1 )]
position = Vector2( 0, 120 )

[node name="Enemy_6,0" parent="." groups=[
"row_0",
] instance=ExtResource( 1 )]
position = Vector2( 45, 120 )

[node name="Enemy_7,0" parent="." groups=[
"row_0",
] instance=ExtResource( 1 )]
position = Vector2( 90, 120 )

[node name="Enemy_8,0" parent="." groups=[
"row_0",
] instance=ExtResource( 1 )]
position = Vector2( 135, 120 )

[node name="Enemy_9,0" parent="." groups=[
"row_0",
] instance=ExtResource( 1 )]
position = Vector2( 180, 120 )

[node name="Enemy_10,0" parent="." groups=[
"row_0",
] instance=ExtResource( 1 )]
position = Vector2( 225, 120 )

[node name="EnemyDeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="MoveTimerLong" type="Timer" parent="."]
one_shot = true

[node name="MoveTimerShort" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="MoveTimerLong" to="." method="_on_MoveTimerLong_timeout"]
[connection signal="timeout" from="MoveTimerShort" to="." method="_on_MoveTimerShort_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
